enable Spring Security support
